--- a/_publications/2024-07-10.md
+++ b/_publications/2024-07-10.md
@@ -2,9 +2,9 @@
 title: "Paper Title Number 3"
 collection: publications
 category: manuscripts
-permalink: /publication/2015-10-01-paper-title-number-3
+permalink: /publication/2024-07-10
 excerpt: 'This paper is about the number 3. The number 4 is left for future work.'
-date: 2015-10-01
+date: 2024-07-10
 venue: 'Journal 1'
 slidesurl: #'http://academicpages.github.io/files/slides3.pdf'
 paperurl: #'http://academicpages.github.io/files/paper3.pdf'
