--- a/_publications/2024-07-10.md
+++ b/_publications/2024-07-10.md
@@ -1,5 +1,5 @@
 ---
-title: "Paper Title Number 3"
+title: "Numerical dispersion and dissipation in 3D wave propagation for polycrystalline homogenization"
 collection: publications
 category: manuscripts
 permalink: /publication/2024-07-10
