--- a/_publications/2024-07-10.md
+++ b/_publications/2024-07-10.md
@@ -11,4 +11,4 @@ paperurl: #'http://academicpages.github.io/files/paper3.pdf'
 citation: 'Liu, F., Argüelles, A. P., & Peco, C. (2024). Numerical dispersion and dissipation in 3D wave propagation for polycrystalline homogenization. Finite Elements in Analysis and Design, 240, 104212.'
 ---
 
-The contents above will be part of a list of publications, if the user clicks the link for the publication than the contents of section will be rendered as a full page, allowing you to provide more information about the paper for the reader. When publications are displayed as a single page, the contents of the above "citation" field will automatically be included below this section in a smaller font.
+The engineering design of metamaterials with selected acoustic properties necessitates adequate prediction of the elastic wave propagation across various domains and specific frequency ranges. This study proposes a systematic approach centered on the finite element characterization of the three-dimensional Green's function for a representative volume element. The inherent characteristics of broadband waves and singular impulses contribute to notable challenges related to accuracy and high-frequency oscillations, and thus the emphasis is set on providing an exhaustive analysis for this numerical characterization scheme. The study focuses on the broadband wave dispersion and requisite considerations for numerical damping, and evaluates the impact of dissipation and space-time discretization schemes for optimal performance. In contrast to conventional methods that employ a plane wave, the proposed approach does not need extra assumptions on the enforcement of boundary conditions and can effectively consider the influences of length scale from the material configurations. A quasi-equiaxed polycrystalline ice microstructure is utilized as an application example for homogenizing heterogeneous materials, in line with advancements in cryo-ultrasonic testing techniques.
