--- a/_posts/2024-07-10.md
+++ b/_posts/2024-07-10.md
@@ -1,7 +1,7 @@
 ---
 title: 'Our new article on the ice project has been accepted.'
 date: 2024-07-10
-permalink: /posts/2024/blog-post-1/
+permalink: /posts/2024-07-10
 tags:
   - cool posts
   - category1
@@ -10,11 +10,11 @@ tags:
 
 Achieving a tunable coupled ultrasonic non-destructive test requires reliable prediction of the elastic wave properties of the coupled medium. Our article develops a new scheme based on Green's function, with an emphasis on numerical dispersion and dissipation in the homogenization process. This is ideal for bridging the gap between numerical wave modeling and established analytical statistical approaches.
 
-![marmot](/assets/img/lakeIce.png)
+![marmot](/images/lakeIce.png)
 
 _Lake ice crystals (Photoed by Reed Liu, at Black Moshannon State Park)._
 
-
+<!-- 
 Headings are cool
 ======
 
@@ -22,4 +22,4 @@ You can have many headings
 ======
 
 Aren't headings cool?
-------
+------ -->
