--- a/_posts/2024-07-10.md
+++ b/_posts/2024-07-10.md
@@ -1,7 +1,7 @@
 ---
 title: 'Our new article on the ice project has been accepted.'
 date: 2024-07-10
-permalink: /posts/2024-07-10
+permalink: /post/2024-07-10
 tags:
   - cool posts
   - category1
