--- a/_publications/2024-07-10.md
+++ b/_publications/2024-07-10.md
@@ -1,7 +1,7 @@
 ---
 title: "Numerical dispersion and dissipation in 3D wave propagation for polycrystalline homogenization"
 collection: publications
-category: manuscripts
+category: Journal
 permalink: /publication/2024-07-10
 excerpt: 'This paper is about the number 3. The number 4 is left for future work.'
 date: 2024-07-10
