--- a/_publications/2024-07-10.md
+++ b/_publications/2024-07-10.md
@@ -5,7 +5,7 @@ category: Journal
 permalink: /publication/2024-07-10
 excerpt: 'This paper is about the number 3. The number 4 is left for future work.'
 date: 2024-07-10
-venue: 'Journal 1'
+venue: 'Finite Elements in Analysis and Design'
 slidesurl: #'http://academicpages.github.io/files/slides3.pdf'
 paperurl: #'http://academicpages.github.io/files/paper3.pdf'
 citation: 'Liu, F., Argüelles, A. P., & Peco, C. (2024). Numerical dispersion and dissipation in 3D wave propagation for polycrystalline homogenization. Finite Elements in Analysis and Design, 240, 104212.'
