--- a/_publications/2024-07-10-journal.md
+++ b/_publications/2024-07-10-journal.md
@@ -2,7 +2,7 @@
 title: "Numerical dispersion and dissipation in 3D wave propagation for polycrystalline homogenization"
 collection: publications
 category: Journal
-permalink: /publication/2024-07-10
+permalink: /publication/2024-07-10-journal
 excerpt: 'This paper is about the number 3. The number 4 is left for future work.'
 date: 2024-07-10
 venue: 'Finite Elements in Analysis and Design'
