--- a/_news/2024-07-10-news.md
+++ b/_news/2024-07-10-news.md
@@ -2,9 +2,8 @@
 title: 'Our new article on the ice project has been accepted.'
 date: 2024-07-10
 permalink: /news/2024-07-10-news
-image: /images/lakeIce.png
 tags:
-  - research
+  - ice
 ---
 
 Achieving a tunable coupled ultrasonic non-destructive test requires reliable prediction of the elastic wave properties of the coupled medium. Our article develops a new scheme based on Green's function, with an emphasis on numerical dispersion and dissipation in the homogenization process. This is ideal for bridging the gap between numerical wave modeling and established analytical statistical approaches.
