first update finished

--- a/_news/2024-05-06-news.md
+++ b/_news/2024-05-06-news.md
@@ -1,6 +1,6 @@
 ---
-title: 'Our new article on the ice project has been accepted.'
-date: 2024-05-05
+title: 'New collabrated article on printing concrete modeling is online now.'
+date: 2024-05-06
 permalink: /news/2024-05-06-news
 tags:
   - ice
@@ -8,7 +8,7 @@ tags:
 
 Our article titled "Modeling Concrete Deposition via 3D Printing Using the Reproducing Kernel Particle Method (RKPM)" has been published in Cement and Concrete Research and is now available online. This work highlights the advantages and possibilities of using RKPM for viscous flow modeling.
 
-![marmot](/assets/img/print_concrete.png)
+![marmot](/images/print_concrete.png)
 
 _Printed concrete modeling._
 
