--- a/_news/2024-05-06-news.md
+++ b/_news/2024-05-06-news.md
@@ -3,7 +3,8 @@ title: 'New collabrated article on printing concrete modeling is online now.'
 date: 2024-05-06
 permalink: /news/2024-05-06-news
 tags:
-  - ice
+  - RKPM
+  - 3D Printing Concrete
 ---
 
 Our article titled "Modeling Concrete Deposition via 3D Printing Using the Reproducing Kernel Particle Method (RKPM)" has been published in Cement and Concrete Research and is now available online. This work highlights the advantages and possibilities of using RKPM for viscous flow modeling.
